--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,10 @@ label {
   margin-top: 4px;
 }
 
+.links.log-in {
+  padding-right: 10px;
+}
+
 .button a {
   color: #f2f2f2;
   font-weight: 400;
@@ -192,6 +196,11 @@ h6 {
   font-size: 2.35em;
 }
 
+.hero-heading,
+.hero-description,
+.sign-up-heading {
+  margin-bottom: 50px;
+}
 .page-heading {
   font-size: 3em;
 }
@@ -343,7 +352,8 @@ footer img {
     border-radius: 5px;
     background-image: url('../img/search.png');
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: 150px;
+    text-indent: 10px;
   }
 
   .main-nav,
